# zksync-crypto-gpu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  deny.toml
.github/release-please/: config.json  manifest.json
.github/workflows/: build.yaml  cargo-license.yaml  ci.yaml  pr-title.yaml  publish-crates.yaml  release-please-prepare-branch.yaml  release-please.yaml  test-gpu.yaml
crates/bindings-generator/: Cargo.toml
crates/boojum-cuda/: Cargo.toml  README.md
crates/boojum-cuda/benches/: poseidon2.rs
crates/boojum-cuda/native/: .gitignore  CMakeLists.txt  blake2s.cu  bn254.cu  bn254.cuh  common.cuh  context.cuh  gates.cu  goldilocks.cuh  memory.cuh  ntt_b2n.cuh  ops_complex.cu  poseidon_constants.cuh  ptx.cuh
crates/boojum-cuda/native/ops_cub/: device_reduce.cu
crates/boojum-cuda/native/poseidon2/: queries.cuh
crates/boojum-cuda/native/poseidon2/bn/: poseidon2_bn.cuh  poseidon2_bn_constants.cuh.template  poseidon2_bn_mt.cu  poseidon2_bn_queries.cu  poseidon2_bn_st.cu
crates/boojum-cuda/native/poseidon2/gl/: poseidon2_gl.cuh  poseidon2_gl_constants.cuh.template  poseidon2_gl_gates.cuh  poseidon2_gl_mt.cu  poseidon2_gl_queries.cu  poseidon2_gl_st.cu  poseidon2_gl_st.cuh
crates/boojum-cuda/src/: blake2s.rs  context.rs  device_structures.rs  extension_field.rs  gates.rs  gates_data.rs  gates_data.rs.template  lib.rs  ops_complex.rs  poseidon2.rs  utils.rs
crates/boojum-cuda/src/ops_cub/: device_radix_sort.rs  device_run_length_encode.rs  device_scan.rs
crates/criterion-cuda/: Cargo.toml
crates/criterion-cuda/src/: lib.rs
crates/cudart/: Cargo.toml
crates/cudart-sys/: Cargo.toml  build.rs
crates/cudart-sys-bindings-generator/: Cargo.toml
crates/cudart-sys-bindings-generator/src/: main.rs
crates/cudart-sys/src/: bindings.rs  lib.rs  utils.rs
crates/cudart/src/: device.rs  error.rs  event.rs  execution.rs  lib.rs  memory.rs  memory_pools.rs  occupancy.rs  peer.rs  result.rs  stream.rs  unified.rs
crates/cudart/src/slice/: allocation_data.rs  cuda_slice.rs  device_slice.rs
crates/fflonk/: Cargo.toml
crates/fflonk/src/: allocator.rs  combined_poly.rs  context.rs  convenience.rs  device.rs  error.rs  lib.rs  poly.rs  prover.rs  setup.rs  storage.rs  test.rs  utils.rs
crates/fflonk/src/allocator/: bitmap.rs  mod.rs  pinned.rs  pool.rs  static_device.rs
crates/fflonk/src/dbuffer/: draw_vec.rs  dscalar.rs  dslice.rs  dvec.rs  iter.rs  mod.rs
crates/fflonk/src/primitives/: arithmetic.rs  mem.rs  mod.rs  msm.rs  ntt.rs  other.rs
crates/fflonk/src/relations/: copy_perm.rs  main_gate.rs  mod.rs
crates/gpu-ffi/: Cargo.toml  build.rs
crates/gpu-ffi-bindings-generator/: Cargo.toml
crates/gpu-ffi-bindings-generator/src/: main.rs
crates/gpu-ffi/src/: arithmetic.rs  bindings.rs  bindings_extra.rs  lib.rs  msm.rs  ntt.rs  other.rs  utils.rs  wrapper.rs
crates/gpu-prover/: Cargo.toml
crates/gpu-prover/src/: proof.rs  setup_precomputations.rs  utils.rs
crates/gpu-prover/src/cuda_bindings/: async_vec.rs  device_arithmetic.rs  device_buf.rs  device_heavy_ops.rs  event.rs
crates/gpu-prover/src/memory_manager/: copying_operations.rs  tests.rs
crates/gpu-prover/src/memory_manager/proving_operations/: columns_sorting.rs  compute_assigments_and_permutations.rs  compute_permutations.rs  compute_state_values.rs  create_selectors.rs
crates/gpu-prover/src/rounds/: round1.rs  round15.rs  round2.rs  round3.rs
crates/proof-compression/: Cargo.toml
crates/proof-compression/data/: compression_wrapper_5_proof.json  scheduler_recursive_vk.json
crates/proof-compression/scripts/: download-ignition-transcripts.sh  setup-instance.sh
crates/proof-compression/src/: artifacts.rs  blob_storage.rs  chain.rs  common.rs  compression.rs  context.rs  convenience.rs  cpu.rs  gpu.rs  lib.rs  main.rs  proof_system.rs  serialization.rs  snark_wrapper.rs  step.rs  test.rs  utils.rs
crates/proof-compression/src/proof_system/: boojum.rs  crs.rs  fflonk.rs  interface.rs  mod.rs  plonk.rs
crates/proof-compression/src/step/: compression.rs  mod.rs  snark_wrapper.rs
crates/shivini/: Cargo.toml
crates/shivini/src/: constraint_evaluation.rs  context.rs  copy_permutation.rs  dvec.rs  fri.rs  gpu_proof_config.rs  lib.rs  lookup.rs  oracle.rs  poly.rs  pow.rs  prover.rs  quotient.rs  synthesis_utils.rs  test.rs  utils.rs
crates/shivini/src/cs/: setup.rs  witness.rs
crates/shivini/src/data_structures/: arguments.rs  cache.rs  mod.rs  quotient.rs  setup.rs  storage.rs  trace.rs
crates/shivini/src/primitives/: arith.rs  cs_helpers.rs  helpers.rs  mem.rs  mod.rs  ntt.rs  tree.rs
crates/shivini/src/static_allocator/: device.rs  host.rs
crates/shivini/test_data/base/: 1.circuit  1.cpu.proof
crates/shivini/test_data/compression/: compression_1_wrapper.circuit  compression_2_wrapper.circuit  scheduler_recursive_proof.json
crates/shivini/test_data/leaf/: 11.circuit  12.circuit  5.circuit  6.circuit  9.circuit
crates/wrapper-prover/: Cargo.toml
crates/wrapper-prover/src/: lib.rs  tests.rs
