[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
repository = "https://github.com/matter-labs/zksync-crypto-gpu"
# All the packages in the workspace should have the same version
version = "0.155.8" # x-release-please-version

[workspace.dependencies]
# Local dependencies
boojum-cuda = { version = "=0.155.8", path = "crates/boojum-cuda" }
era_criterion_cuda = { version = "=0.155.8", path = "crates/criterion-cuda" }
era_cudart = { version = "=0.155.8", path = "crates/cudart" }
era_cudart_sys = { version = "=0.155.8", path = "crates/cudart-sys" }
era_cudart_sys_bindings_generator = { version = "=0.155.8", path = "crates/cudart-sys-bindings-generator" }
fflonk = { version = "=0.155.8", path = "crates/fflonk", package = "fflonk-cuda" }
gpu-ffi = { version = "=0.155.8", path = "crates/gpu-ffi", package = "zksync-gpu-ffi" }
gpu-ffi-bindings-generator = { version = "=0.155.8", path = "crates/gpu-ffi", package = "zksync-gpu-ffi-bindings-generator" }
gpu-prover = { version = "=0.155.8", path = "crates/gpu-prover", package = "zksync-gpu-prover" }
shivini = { version = "=0.155.8", path = "crates/shivini" }
wrapper-prover = { version = "=0.155.8", path = "crates/wrapper-prover", package = "zksync-wrapper-prover" }

# These dependencies should be shared by all the crates.
# zksync-crypto repository
boojum = { git = "https://github.com/matter-labs/zksync-crypto", branch = "di/bump-rustc-test" }
fflonk-cpu = { package = "fflonk", git = "https://github.com/matter-labs/zksync-crypto", branch = "di/bump-rustc-test" }
franklin-crypto = { git = "https://github.com/matter-labs/zksync-crypto", branch = "di/bump-rustc-test" }
rescue_poseidon = { git = "https://github.com/matter-labs/zksync-crypto", branch = "di/bump-rustc-test" }
snark_wrapper = { git = "https://github.com/matter-labs/zksync-crypto", branch = "di/bump-rustc-test" }

# zksync-protocol repository
circuit_definitions = { git = "https://github.com/matter-labs/zksync-protocol", branch = "di/bump-rustc-test" }
zkevm_test_harness = { git = "https://github.com/matter-labs/zksync-protocol", branch = "di/bump-rustc-test" }

[patch.crates-io]
#bellman = { package = "zksync_bellman", path = "../zksync-crypto/crates/bellman" }
#boojum = { path = "../zksync-crypto/crates/boojum" }
#fflonk-cpu = { package = "fflonk", path = "../zksync-crypto/crates/fflonk" }
#franklin-crypto = { path = "../zksync-crypto/crates/franklin-crypto" }
#rescue_poseidon = { path = "../zksync-crypto/crates/rescue-poseidon" }
#snark_wrapper = { path = "../zksync-crypto/crates/snark-wrapper" }
#cs_derive = { package = "zksync_cs_derive", path = "../zksync-crypto/crates/cs_derive" }
#zksync_pairing = { path = "../zksync-crypto/crates/pairing" }
#
#circuit_definitions = { path = "../zksync-protocol/crates/circuit_definitions" }
#zkevm_test_harness = { path = "../zksync-protocol/crates/zkevm_test_harness" }

[profile.release]
debug = "line-tables-only"
