[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
repository = "https://github.com/matter-labs/zksync-crypto-gpu"
# All the packages in the workspace should have the same version
version = "0.156.0" # x-release-please-version

[workspace.dependencies]
# Local dependencies
boojum-cuda = { version = "=0.156.0", path = "crates/boojum-cuda" }
era_criterion_cuda = { version = "=0.156.0", path = "crates/criterion-cuda" }
era_cudart = { version = "=0.156.0", path = "crates/cudart" }
era_cudart_sys = { version = "=0.156.0", path = "crates/cudart-sys" }
era_cudart_sys_bindings_generator = { version = "=0.156.0", path = "crates/cudart-sys-bindings-generator" }
fflonk = { version = "=0.156.0", path = "crates/fflonk", package = "fflonk-cuda" }
gpu-ffi = { version = "=0.156.0", path = "crates/gpu-ffi", package = "zksync-gpu-ffi" }
gpu-ffi-bindings-generator = { version = "=0.156.0", path = "crates/gpu-ffi", package = "zksync-gpu-ffi-bindings-generator" }
gpu-prover = { version = "=0.156.0", path = "crates/gpu-prover", package = "zksync-gpu-prover" }
shivini = { version = "=0.156.0", path = "crates/shivini" }
wrapper-prover = { version = "=0.156.0", path = "crates/wrapper-prover", package = "zksync-wrapper-prover" }

# These dependencies should be shared by all the crates.
# zksync-crypto repository
boojum = { git = "https://github.com/matter-labs/zksync-crypto", branch = "oh_for_wrapper" }
fflonk-cpu = { package = "fflonk", git = "https://github.com/matter-labs/zksync-crypto", branch = "oh_for_wrapper" }
franklin-crypto = { git = "https://github.com/matter-labs/zksync-crypto", branch = "oh_for_wrapper" }
rescue_poseidon = { git = "https://github.com/matter-labs/zksync-crypto", branch = "oh_for_wrapper" }
snark_wrapper = { git = "https://github.com/matter-labs/zksync-crypto", branch = "oh_for_wrapper" }

# zksync-protocol repository
circuit_definitions = { git = "https://github.com/matter-labs/zksync-protocol", branch = "oh_for_wrapper" }
zkevm_test_harness = { git = "https://github.com/matter-labs/zksync-protocol", branch = "oh_for_wrapper" }

[profile.release]
debug = "line-tables-only"
