[package]
name = "era_cuda_bindings_generator"
version = "0.2.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-cuda"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "CUDA Bindings generator for ZKsync"
publish = false

[dependencies]
bindgen = "0.69"
era_cudart_sys = { version = "=0.2.0", path = "../cudart-sys" }
