[package]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
name = "boojum-cuda"
build = "build/main.rs"
description = "Boojum-CUDA is a library implementing GPU-accelerated cryptographic functionality for the zkSync prover"

[build-dependencies]
boojum.workspace = true
era_cudart_sys.workspace = true
snark_wrapper.workspace = true
cmake = "0.1"
itertools = "0.13"

[dependencies]
boojum.workspace = true
era_cudart.workspace = true
era_cudart_sys.workspace = true
snark_wrapper.workspace = true
itertools = "0.13"
lazy_static = "1.4"

[dev-dependencies]
era_criterion_cuda.workspace = true
blake2 = "0.10"
criterion = "0.5"
criterion-macro = "0.4"
itertools = "0.13"
rand = "0.8"
rayon = "1.10"
serial_test = "3.1"

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "gates"
harness = false

[[bench]]
name = "goldilocks"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "ops_complex"
harness = false

[[bench]]
name = "poseidon2"
harness = false
