[package]
name = "era_criterion_cuda"
version = "0.2.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-cuda"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "Criterion benchmarks support for CUDA event-based timings for ZKsync"

[dependencies]
criterion = "0.5"
era_cudart = { version = "=0.2.0", path = "../cudart" }
