[package]
name = "era_criterion_cuda"
version.workspace = true
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-cuda"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "Criterion benchmarks support for CUDA event-based timings for ZKsync"
publish = false

[dependencies]
criterion = "0.5"
era_cudart.workspace = true
