[package]
name = "era_cudart_sys"
version = "0.2.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-cuda"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "Raw CUDA bindings for ZKsync"

[dependencies]
serde_json = "1.0"

[build-dependencies]
serde_json = "1.0"
