[package]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
name = "era_cudart_sys"
description = "Raw CUDA bindings for ZKsync"

[dependencies]
serde_json = "1.0"

[build-dependencies]
serde_json = "1.0"
