[package]
name = "fflonk-gpu"
edition = "2021"
version.workspace = true

[dependencies]
fflonk-cpu = { package = "fflonk-cpu", workspace = true, optional = true }
gpu-ffi.workspace = true
rand = "0.4"
derivative = "2.2"
byteorder = "1"
bincode = "1.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_derive = "1"

[features]
default = ["no-sanity"]
sanity = ["fflonk-cpu/sanity"]
no-sanity = ["fflonk-cpu"]
