[package]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
name = "fflonk-cuda"
description = "CUDA implementation of the fflonk prover"
exclude = ["/data"]

[dependencies]
fflonk-cpu = {workspace = true}
circuit_definitions.workspace = true
gpu-ffi.workspace = true
rand = "0.4"
derivative = "2.2"
byteorder = "1"
bincode = "1.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_derive = "1"

[features]
default = ["sanity"]
sanity = []