[package]
name = "zksync-gpu-ffi"
version = "0.150.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-heavy-ops-service"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync GPU FFI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
futures-locks = "0.7"
derivative = "2.2"
num_cpus = "1"
crossbeam = "0.8"

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
rand = "0.4"

[lib]
doctest = false

