[package]
name = "zksync-gpu-prover"
version = "0.150.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-heavy-ops-service"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync GPU prover utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-ffi = { package = "zksync-gpu-ffi", version = "=0.150.0", path = "../gpu-ffi"}
crossbeam = "0.8"
rand = "0.4"
num_cpus = "1"
franklin-crypto = { version = "=0.2.2", optional = true}
# franklin-crypto = {path = "../../franklin-crypto", features = ["plonk"], optional = true}
itertools = "0.10"
cfg-if = "1"
bit-vec = "0.6"
serde = {version = "1", features = ["derive", "rc"]}

[features]
default = ["allocator"]
no_allocator = ["franklin-crypto"]
allocator = ["franklin-crypto/allocator"]
