[package]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
name = "zksync-gpu-prover"
description = "ZKsync GPU prover utilities"

[dependencies]
gpu-ffi.workspace = true
crossbeam = "0.8"
rand = "0.4"
num_cpus = "1"
franklin-crypto = { version = "=0.2.2", optional = true }
itertools = "0.10"
cfg-if = "1"
bit-vec = "0.6"
serde = {version = "1", features = ["derive", "rc"]}

[features]
default = ["allocator"]
no_allocator = ["franklin-crypto"]
allocator = ["franklin-crypto/allocator"]
