[package]
name = "proof-compression-gpu"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
shivini = { package = "shivini", workspace = true, default-features = false }
fflonk = { package = "fflonk-gpu", workspace = true }
circuit_definitions = { package = "circuit_definitions", workspace = true }

serde_json = "1"
bincode = "1.3"

[dev-dependencies]
