[package]
name = "proof-compression"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
circuit_definitions = { package = "circuit_definitions", workspace = true }
fflonk = { package = "fflonk", workspace = true }
shivini = { package = "shivini", workspace = true, default-features = false }
serde = "1"
serde_json = "1"
bincode = "1.3"
cfg-if = "1.0"
byteorder = "1"

[features]
default = ["gpu"]
gpu = []
cpu = []
