[package]
name = "proof-compression"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
description = "Both cuda and cpu based proof compression and wrapping chain"
exclude = ["/data"]

[dependencies]
circuit_definitions.workspace = true
fflonk = {workspace = true, optional = true}
shivini.workspace = true
gpu-prover = { workspace = true, optional = true}
serde = "1"
serde_json = "1"
bincode = "1.3"
cfg-if = "1.0"
byteorder = "1"

[features]
default = ["gpu", "fflonk", "gpu-prover"]
gpu = []
cpu = []
allocator = ["fflonk", "gpu-prover/allocator"]
