[package]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
version.workspace = true
name = "shivini"
description = "Shvini is a library implementing a GPU-accelerated zkSync prover"
exclude = ["/test_data"]

[dependencies]
boojum = "=0.2.2"
boojum-cuda.workspace = true
era_cudart.workspace = true
era_cudart_sys.workspace = true
circuit_definitions = { workspace = true, optional = true }

rand = "0.8"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "serde",
] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
derivative = "2.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
nvtx = { version = "1.3", optional = true }

[dev-dependencies]
serial_test = "3.1"

[features]
default = ["zksync"]
zksync = ["circuit_definitions"]
allocator_stats = []
nvtx = ["dep:nvtx"]
