[package]
name = "zksync-wrapper-prover"
version = "0.150.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-heavy-ops-service"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync GPU wrapper prover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-prover = { package = "zksync-gpu-prover", version = "=0.150.0", path = "../gpu-prover" }
# zkevm_test_harness = {path = "../../era-zkevm_test_harness"}
# circuit_definitions = {path = "../../era-zkevm_test_harness/circuit_definitions"}
zkevm_test_harness = "=0.150.2"
circuit_definitions = "=0.150.2"
